# DNS-Watch

./: .env.example  .gitignore  README.md  SECURITY_AUDIT_REPORT.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
server/: Dockerfile  docker-entrypoint.sh  pyproject.toml
server/app/: alerts.py  backup.py  db.py  main.py  name_history.py  names.py  oui.py  psl.py  resolve.py  rollups.py  tags.py
server/dns_dashboard_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/scripts/: build_oui_table.py  build_psl_table.py
server/tests/: conftest.py  test_alerts.py  test_anomalies.py  test_api.py  test_auth.py  test_backup.py  test_csrf.py  test_db.py  test_domain_fanout.py  test_domain_retention.py  test_entropy.py  test_heatmap.py  test_id_aggregates.py  test_latency_anomaly.py  test_name_history.py  test_names.py  test_nxdomain_anomaly.py  test_oui.py  test_period_and_domain_status.py  test_psl.py  test_query_latency.py  test_resolve.py  test_rollup_reads.py  test_rollups.py  test_scheduler.py  test_simulate.py  test_storage_housekeeping.py  test_suppressions.py  test_tags.py  test_tail.py  test_timeline.py  test_top_blocked_per_client.py  test_tunneling.py  test_vendor_filter.py  test_webhook_security.py
server/tests/perf/: bench_id_aggregates.py
tasks/00-shared/: 01-tab-navigation-shell.md
tasks/01-anomaly-detection/: 01-backend-baseline-engine.md  02-backend-api-and-tests.md  03-frontend-anomalies-panel.md  04-frontend-click-through.md  05-verification.md  README.md
tasks/02-live-stream/: 01-backend-tail-endpoint.md  02-frontend-stream-console-shell.md  03-frontend-throttling.md  04-frontend-highlight-rules.md  05-verification.md  (+1 more)
uat/: README.md  api.Dockerfile  docker-compose.uat.yml  snapshot-pihole-db.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
(+43 files in other folders)
