[project]
name = "dns-dashboard-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Used only for a per-row match timeout in db.simulate_pattern() — stdlib
    # `re` has no way to bound a pathological user-supplied pattern's
    # runtime, which is otherwise a ReDoS vector against the blocklist
    # simulator (see SECURITY_AUDIT_REPORT.md finding #4).
    "regex>=2024.4.16",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
